src/objects/FlowPage__c.object
<CustomObject>
    <fields>
        <fullName>Flow_Page_Key__c</fullName>
        <label>Questionnaire Page Key</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Flow__c</fullName>
        <label>Questionnaire</label>
        <referenceTo>Flow__c</referenceTo>
        <relationshipLabel>Questionnaire Pages</relationshipLabel>
        <relationshipName>Flow_Pages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form</label>
        <referenceTo>Form__c</referenceTo>
        <relationshipName>Flow_Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NextPage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Page</label>
        <referenceTo>FlowPage__c</referenceTo>
        <relationshipName>Linked_Next_Page</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PrevPage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PrevPage</label>
        <referenceTo>FlowPage__c</referenceTo>
        <relationshipName>Linked_Prev_Page</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Questionnaire Page</label>
    <nameField>
        <label>Questionnaire Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questionnaire Pages</pluralLabel>
    <recordTypes>
        <fullName>Form</fullName>
        <active>true</active>
        <label>Form</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>No_Blank_Spaces_in_Page_Key</fullName>
        <active>true</active>
        <description>Ensure there are no blank spaces in page key field</description>
        <errorConditionFormula>CONTAINS( Flow_Page_Key__c , &quot; &quot;)</errorConditionFormula>
        <errorDisplayField>Flow_Page_Key__c</errorDisplayField>
        <errorMessage>Enter page key in like:  page_key</errorMessage>
    </validationRules>
</CustomObject>